Use module path in test container again